# ParticleSimulatorEM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.txt
data/: output.csv
include/: CSVWriter.hpp  Config.hpp  EulerIntegrator.hpp  Field.hpp  Integrator.hpp  Particle.hpp  RK4Integrator.hpp  Simulation.hpp  UniformField.hpp  Vec3.hpp
src/: CSVWriter.cpp  Config.cpp  EulerIntegrator.cpp  Particle.cpp  RK4Integrator.cpp  Simulation.cpp  UniformField.cpp  Vec3.cpp  main.cpp
